...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:paddingTop="50dp"
    android:background="#FFD899"
    tools:context=".StartActivity"
    android:id="@+id/start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

                <ImageView
...
            android:textColor="#2b2b2b"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:text="Username" />

        <EditText
            android:id="@+id/textPersonName"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
...
            android:textColor="#2b2b2b"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:text="Password" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPassword" />

        <android.widget.Button
            android:id="@+id/buttonUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="10dp"
...
            android:onClick="loginClicked"
            android:padding="8dp"
            android:text="LOGIN"
            android:textColor="#fef9ef" />

        <android.widget.Button
            android:id="@+id/buttonGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:background="@drawable/rounded_corners"
...
