<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD899"
    tools:context=".MainActivity"
    android:id="@+id/home">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewUsername"
            app:layout_constraintTop_toBottomOf="@+id/textViewUsername">

            <TextView
                android:id="@+id/textViewPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:text="Total Points: 0"
                android:textAllCaps="true"
                android:textColor="#227C9D"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="7dp"
                android:text="USER:"
                android:textColor="#2b2b2b"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textViewPoints"
                app:layout_constraintStart_toStartOf="@+id/textViewPoints"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/trivia_quiz_game" />
        </RelativeLayout>

        <android.widget.Button
            android:id="@+id/buttonPlayGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#2b2d42"
            android:padding="8dp"
            android:text="PLAY GAME"
            android:textColor="#fef9ef" />

        <android.widget.Button
            android:id="@+id/buttonGuide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#2b2d42"
            android:padding="8dp"
            android:text="Guide"
            android:textColor="#fef9ef" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>