<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF9EF"
    android:paddingTop="80dp"
    android:paddingBottom="80dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:id="@+id/category_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="#227C9D"
            android:tag="0"
            android:textColor="#FFE0AD"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="#227C9D"
            android:tag="1"
            android:textColor="#FFE0AD"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="#227C9D"
            android:tag="2"
            android:textColor="#FFE0AD"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="#227C9D"
            android:tag="3"
            android:textColor="#FFE0AD"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>



    </LinearLayout>